ros2_ws/log/build_2024-12-08_19-19-26/vacuum_robot/stderr.log
  File "/home/felipe/ros2_ws/install/vacuum_robot/lib/python3.10/site-packages/vacuum_robot/vacuum_robot_controller.py", line 1
    considerando esse código, faz sentido ter a funcionalidade colisão?
                 ^^^^
SyntaxError: invalid syntax

